2006-12-09  Adam Schreiber  <sadam@clemson.edu>

    * libcryptui/cryptui.pc.in:
    * plugins/nautilus/Makefile.am: Fix problem with ignoring 
    --datarootdir. Patch from Christopher Taylor. Fixes #354245.
    * plugins/applet/seahorse-applet.c: Fix compile warning.

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>

    * libseahorse/seahorse-context.c:
    * libseahorse/seahorse-context.h:
    * libseahorse/seahorse-key.h:
    * libseahorse/seahorse-keyset.c: Fix critical warnings when closing 
    window or deleting a key. Fixes #358697, #362711

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>
    
    * libseahorse/seahorse-context.c: Fix bad arguments to 
    g_idle_add_full

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-add-subkey.c:
    * libseahorse/seahorse-pgp-key-op.c: Fix Add subkey dialog.

2006-12-05  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-add-subkey.c:
    * libseahorse/seahorse-pgp-key-op.c: Fix Add subkey dialog.
    Fixes #382330

2006-12-03  Nate Nielsen  <nielsen@memberwebs.com>

    * NEWS:
    * README: 
    * plugins/applet/docs/Makefile.am: Version 0.9.8
    * configure.in: Bump version number

2006-11-28  Nate Nielsen  <nielsen@memberwebs.com>

    * src/seahorse-keyserver-sync.c: Remove unnecessary warning when 
    built without LDAP support. Fixes #374257

2006-11-24  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent.c:
    * agent/seahorse-agent.h:
    * daemon/seahorse-daemon.c: Add option to seahorse-daemon to exec
    another process once it forks. This allows chaining into startup.

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c: Other initialization fixes.
    * daemon/seahorse-daemon.c: Quit properly when we get a signal 
    during initialization. 

2006-11-23  Nate Nielsen  <nielsen@memberwebs.com>

    * agent/seahorse-agent-ssh.c:
    * agent/seahorse-agent.c: