@@ -1,3 +1,14 @@
+2006-12-10  Nate Nielsen  <nielsen@memberwebs.com>
+
+	* agent/Makefile.am:
+	* agent/seahorse-agent-main.c (added):
+	* agent/seahorse-agent.1 (added):
+	* daemon/Makefile.am:
+	* daemon/seahorse-daemon.1:
+	* daemon/seahorse-daemon.c: Split apart seahorse-agent and 
+	seahorse-daemon into different processes similar to described on 
+	the mailing list.
+
 2006-12-09  Adam Schreiber  <sadam@clemson.edu>
 
     * libcryptui/cryptui.pc.in:
